force-app/main/default/objects/NPN_Onboarding_Automation_2__c/NPN_Onboarding_Automation_2__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NPN Onboarding Automation 2</label>
</CustomObject>