force-app/main/default/objects/NPN_Onboarding_Automation_2__c/fields/Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter__c</fullName>
    <label>Cover Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>