force-app/main/default/objects/NPN_Onboarding_Automation_2__c/fields/NEW_MDF_REBATE_VENDOR_SETUP_FORM__c.field-meta.xml
<CustomField>
    <fullName>NEW_MDF_REBATE_VENDOR_SETUP_FORM__c</fullName>
    <label>NEW MDF REBATE VENDOR SETUP FORM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>