force-app/main/default/objects/NPN_Onboarding_Automation_2__c/fields/NPN_Distribution_Form__c.field-meta.xml
<CustomField>
    <fullName>NPN_Distribution_Form__c</fullName>
    <label>NPN Distribution Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>