force-app/main/default/objects/NPN_Onboarding_Automation_2__c/fields/NPN_Key_Contacts_Form__c.field-meta.xml
<CustomField>
    <fullName>NPN_Key_Contacts_Form__c</fullName>
    <label>NPN_Key_Contacts_Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>