force-app/main/default/objects/NPN_Onboarding_Automation_2__c/fields/NPN_OEM_CompetencyExhibit_PV__c.field-meta.xml
<CustomField>
    <fullName>NPN_OEM_CompetencyExhibit_PV__c</fullName>
    <label>NPN_OEM_CompetencyExhibit_PV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>