force-app/main/default/objects/NPN_Onboarding_Automation_2__c/fields/NPN_SP_ProgramGuide__c.field-meta.xml
<CustomField>
    <fullName>NPN_SP_ProgramGuide__c</fullName>
    <label>NPN_SP_ProgramGuide</label>
    <length>255</length>
    <type>Text</type>
</CustomField>